[package]
name = "tmoverlook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
env_logger = "0.10.0"
indicatif = "0.17.3"
lazy_static = "1.4.0"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
shellexpand = "3.1.0"
toml = "0.7.3"
