[package]
name = "tmoverlook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
dialoguer = "0.10.4"
dirs = "5.0.1"
env_logger = "0.10.0"
indicatif = "0.17.3"
lazy_static = "1.4.0"
log = "0.4.17"
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
shellexpand = "3.1.0"
toml = "0.7.3"

[dev-dependencies]
assert_cmd = "2.0.12"
flate2 = "1.0.27"
indoc = "2.0.5"
tar = "0.4.40"
tempdir = "0.3.7"
